syntax = "proto3";
package dashboard.login;

option java_package = "dev.cavefish.yamul.dashboard.login.api";
option java_multiple_files = true;
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  enum LoginResponseValue {
    undefined = 0 ;
    valid = 1;
    invalid = 2;
  }
  LoginResponseValue value = 1;
}

service DashboardLoginService {
  rpc validateLogin (login.LoginRequest) returns (login.LoginResponse);
}